[package]
name = "doh-dns"
version = "0.2.0"
authors = ["Joy Labs Engineering"]
edition = "2018"
repository = "https://github.com/joylabs/doh-dns"
homepage = "https://github.com/joylabs/doh-dns"
documentation = "https://docs.rs/doh-dns"
license = "MIT"
readme = "README.md"
keywords = ["dns", "doh"]
description = """
A DNS over HTTPS (DoH) library that queries public DoH servers provided by 
Google and Clouflare based on `async/await`, `hyper`, and `tokio`.
"""

[dependencies]
hyper = { version = "0.14.20", features = ["full"] }
hyper-tls = "0.5.0"
native-tls = "0.2"
futures-util = "0.3.24"
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
async-trait = "0.1.57"
num = "0.4.0"
num-traits = "0.2"
num-derive = "0.3.3"
idna = "0.3.0"
tokio = { version = "1.21.1", features = ["full"] }
tower-service = "0.3.2"
paste = "1.0.9"
log = "0.4.17"
